--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,13 @@
         </div>
         <div class="actions">
             <div class="actions__container">
-                <input type="text" placeholder="Enter movie title..." class="input">
-                <button class="main-button">Search</button>
-                <button class="main-button">Reset</button>
+                <input type="text" placeholder="Enter movie title..." class="input" id="search-input">
+                <button class="main-button" id="search-btn">Search</button>
+                <button class="main-button" id="reset-btn">Reset</button>
             </div>
         </div>
         <div class="container">
             <div id="results-div">
-
             </div>
         </div>
     </div>
