--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,14 @@
                 <button class="main-button" id="reset-btn">Reset</button>
             </div>
         </div>
-        <div class="container">
-            <div id="results-div">
+        <div class="body">
+            <div class="container">
+                <div id="results-div">
+                </div>
             </div>
         </div>
     </div>
-    <script src="scripts/bundle.js"></script>
+    <script src="scripts/index-bundle.js"></script>
 </body>
 
 </html>
