--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
         </div>
         <div class="body">
             <div class="container">
+                <div id="error-div">
+                </div>
                 <div id="results-div">
                 </div>
             </div>
