--- a/movie.html
+++ b/movie.html
@@ -22,8 +22,8 @@
                 <img id="movie-img">
             </div>
             <div class="movie-column movie-column__center">
-                <h2 id="movie-title">Unknown movie title</h2>
-                <p id="movie-overview">No description for this movie</p>
+                <h2 id="movie-title" class="movie-title">Unknown movie title</h2>
+                <p id="movie-overview" class="movie-description">No description for this movie</p>
             </div>
             <div class="movie-column movie-column__right">
                 <p id="release-date">Release date: unknown</p>
@@ -40,7 +40,7 @@
                     <input type="radio" id="1-star" name="rating" value="1" disabled="true" />
                     <label for="1-star" class="star">&#9733;</label>
                 </div>
-                    <button class="movie-button" id="tmdb-btn">Open in TMDB</button>
+                    <button class="movie-button-2" id="tmdb-btn">TMDB</button>
             </div>
         </div>
     </div>
